# bottau

./: .gitignore  BotTau.py  Broker.py  BrokerABC.py  MT5.py  README.md  TestBotTau.py  TestStrategy.py  ar_strategy.py  backtest.py  common.py  entropy.py  glue_mt5.py  heatmap.py  main.py  pyproject.toml  requirements.txt  targets.py  test.py  test2.py  yf.py  zscore.py
Strategies/: research_sma.py  sma.py
description/: .gitignore  description.tex  references.bib
src/: BotTau.py  Broker.py  TestBotTau.py  YFinanceInterface.py  download.py  logging.conf  test.py  yf.py  zscore.py
src/Strategies/: StrategySMARSI.py  StrategySMA_RSI.py  bollinger_rsi.py  research_sma.py
src/lib/: AbstractStrategy.py  backtest.py  common.py  entropy.py  ml_modelling.py
